# HbbPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/hbb/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hbb/player/: MainActivity.java
app/src/main/java/com/hbb/player/utils/: DisplayUtil.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hbb/player/: ExampleUnitTest.java
ffmpeg/: build.gradle
ffmpeg/src/androidTest/java/com/hbb/ffmpeg/: ExampleInstrumentedTest.java
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: AndroidLog.h  CMakeLists.txt  FFmpegControl.cpp  FFmpegControl.h  FFmpegHelper.cpp  HbbAudio.cpp  HbbAudio.h  HbbCallJava.cpp  HbbCallJava.h  HbbQueue.cpp  HbbQueue.h  HbbVideo.cpp  HbbVideo.h  Playstatus.cpp  Playstatus.h
ffmpeg/src/main/cpp/include/libavutil/: ffversion.h
ffmpeg/src/main/java/com/hbb/ffmpeg/: NativeCallBack.java  safsafsa.java
ffmpeg/src/main/java/com/hbb/ffmpeg/impl/: PlayerStateChangeListener.java
ffmpeg/src/main/java/com/hbb/ffmpeg/opengl/: HBBGLSurfaceView.java  HBBRender.java  HBBShaderUtil.java
ffmpeg/src/main/java/com/hbb/ffmpeg/palyer/: HbbPlayer.java
ffmpeg/src/main/res/raw/: fragment_shader.glsl
ffmpeg/src/test/java/com/hbb/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
